End to end DL & CI/CD Pipeline with AWS and Azure

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -11,20 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\DataScience\\\\DeepLearning\\\\Chicken_Disease_Classification_Project\\\\research'"
+       "'d:\\\\Bappy\\\\YouTube\\\\Chicken-Disease-Classification--Project\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -53,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\DataScience\\\\DeepLearning\\\\Chicken_Disease_Classification_Project'"
+       "'d:\\\\Bappy\\\\YouTube\\\\Chicken-Disease-Classification--Project'"
       ]
      },
      "execution_count": 4,
@@ -74,14 +67,58 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "@dataclass(frozen=True)\n",
-    "class DataIngestionConfig():\n",
+    "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
     "    source_URL: str\n",
     "    local_data_file: Path\n",
-    "    unzip_dir: Path\n",
+    "    unzip_dir: Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
     "\n",
-    "\n"
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config\n",
+    "      "
    ]
   },
   {
@@ -90,8 +127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cnnClassiifer.constants import *\n",
-    "from cnnClassiifer.utils.common import *"
+    "import os\n",
+    "import urllib.request as request\n",
+    "import zipfile\n",
+    "from cnnClassifier import logger\n",
+    "from cnnClassifier.utils.common import get_size"
    ]
   },
   {
@@ -100,80 +140,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ConfigurationManager:\n",
-    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
-    "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
-    "        print([self.config.artifacts_root])\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
     "\n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
-    "        config = self.config.data_ingestion\n",
-    "        create_directories([config.root_dir])\n",
-    "        data_ingestion_config = DataIngestionConfig(\n",
-    "            root_dir=config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir,\n",
-    "        )\n",
-    "        return data_ingestion_config\n",
-    "        "
+    "\n",
+    "    \n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename, headers = request.urlretrieve(\n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "            )\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
+    "        else:\n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import urllib.request as request\n",
-    "import zipfile\n",
-    "from cnnClassiifer import logger\n",
-    "from cnnClassiifer.utils.common import get_size\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DataIngestion:\n",
-    "    def __init__(self, config: DataIngestionConfig):\n",
-    "        self.config = config\n",
-    "    def download_file(self):    \n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
-    "                url = self.config.source_URL,\n",
-    "                filename = self.config.local_data_file\n",
-    "            )\n",
-    "            logger.info(f\" {filename} download with following info: \\n{headers}\")\n",
-    "        else:\n",
-    "            logger.info(f\"File already exists with size: {get_size(Path(self.config.local_data_file))}\") \n",
-    "\n",
-    "    def extract_zip_file(self):\n",
-    "            with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "                zip_ref.extractall(self.config.unzip_dir)\n",
-    "            logger.info(f\"Zip file extracted to: {self.config.unzip_dir}\")\n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['artifacts']\n",
-      "[2024-08-24 10:40:08,513: INFO: common: Created directory at: artifacts]\n",
-      "[2024-08-24 10:40:08,515: INFO: common: Created directory at: artifacts/data_ingestion]\n",
-      "[2024-08-24 10:40:08,518: INFO: 2487484118: File already exists with size: ~ 11345 KB]\n",
-      "[2024-08-24 10:40:08,898: INFO: 2487484118: Zip file extracted to: artifacts/data_ingestion]\n"
+      "[2023-05-31 10:49:27,686: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-05-31 10:49:27,688: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-05-31 10:49:27,689: INFO: common: created directory at: artifacts]\n",
+      "[2023-05-31 10:49:27,691: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-05-31 10:49:48,873: INFO: 1170291011: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 11616915\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"adf745abc03891fe493c3be264ec012691fe3fa21d861f35a27edbe6d86a76b1\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: DD26:594D:46A0F2:51208A:6476D1D8\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Wed, 31 May 2023 04:49:29 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-hkg17929-HKG\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1685508569.655993,VS0,VE951\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "X-Fastly-Request-ID: ef2c1333b2cc4998b0020b1c7edf46d7a603aa90\n",
+      "Expires: Wed, 31 May 2023 04:54:29 GMT\n",
+      "Source-Age: 1\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
@@ -185,16 +221,8 @@
     "    data_ingestion.download_file()\n",
     "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
-    "    raise e\n",
-    "    \n"
+    "    raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -206,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "chicken",
    "language": "python",
    "name": "python3"
   },
@@ -220,8 +248,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
-  }
+   "version": "3.8.16"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
